--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,7 +11,7 @@
 header
 {
     
-        background: url(aset-gambar/food2.png);
+        background: url(food2.png);
         height: auto;    
         background-size: cover;
         width: 100%;
