--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,11 +7,10 @@
 
 
 
-
 header
 {
     
-        background: url(food2.png);
+        background: url(aset-gambar/food2.png);
         height: auto;    
         background-size: cover;
         width: 100%;
@@ -49,8 +48,9 @@ nav
 }
 nav img
 {
-    padding-top: 10px;
+    
     left: 10px;
+    top: 10px;
     position: absolute;
 }
 
@@ -104,13 +104,14 @@ nav ul .active:hover
     
     margin-top: 200px;
     margin-left: 15px;
+    
 }
 
 .main-text h1
 {
-    font-size: 44px;
-    letter-spacing: 1px;
-    font-weight: 900;
+    font-size: 70px;
+    letter-spacing: 8px;
+    font-weight: 500;
     font-family: 'Bebas Neue', cursive;
     color: rgb(250, 214, 8);
 }
@@ -242,7 +243,7 @@ footer {
       height: 300px;
       bottom: 0px;
       width: 100%;
-      position: ;
+      position: NONE;
         bottom: 0;
         position: relative;
     }
